# homeassistant-abcemergency

./: .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  hacs.json  pyproject.toml  requirements_test.txt
.devcontainer/: Dockerfile  devcontainer.json  postCreateCommand.sh  postStartCommand.sh
.github/: labels.yml
.github/ISSUE_TEMPLATE/: 1_bug_report.yml  2_feature_request.yml  4_help_question.yml  config.yml
.github/workflows/: issue-triage.yml  pr-review.yml  release.yml  stale.yml  test.yml
blueprints/automation/: abc_emergency_basic_alert.yaml  abc_emergency_distance_escalation.yaml  abc_emergency_entered_zone.yaml  abc_emergency_exited_zone.yaml  abc_emergency_family_inside_zone.yaml  abc_emergency_family_safety.yaml  abc_emergency_inside_emergency_warning.yaml  abc_emergency_light_alert.yaml  abc_emergency_periodic_zone_reminder.yaml  abc_emergency_severity_escalation.yaml  abc_emergency_tiered_notifications.yaml  abc_emergency_tts_announcement.yaml
custom_components/abcemergency/: __init__.py  api.py  binary_sensor.py  config_flow.py  const.py  coordinator.py  entity.py  geo_location.py  helpers.py  helpers_geo.py  manifest.json  models.py  sensor.py  strings.json
custom_components/abcemergency/translations/: en.json
docs/: README.md  advanced.md  api-reference.md  api-types.md  automations.md  configuration.md  containment-safety.md  dashboard-maps.md  entities.md  faq.md  getting-started.md  glossary.md  notifications.md  scripts.md  troubleshooting.md
examples/: README.md  dashboard_emergency_map.yaml
examples/cards/: alert_status_card.yaml  incident_summary_card.yaml  map_card.yaml
tests/: __init__.py  conftest.py  test_api.py  test_binary_sensor.py  test_config_flow.py  test_const.py  test_coordinator.py  test_entity.py  test_events.py  test_geo_location.py  test_helpers.py  test_helpers_geo.py  test_init.py  test_integration.py  test_sensor.py
